package name changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: adhan_dart
+name: adhan
 description: Adhan for Dart / Muslim Prayer Times Library.
 version: 1.0.0
 author: Riajul Islam <kmriajulislami@gmail.com>
