--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,9 @@ environment:
   sdk: '>=2.8.1 <3.0.0'
 
 dependencies:
-
+  vector_math: any
+  extended_math: any
+  dart_numerics: any
 
 dev_dependencies:
   pedantic: ^1.9.0
