--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: adhan
-description: Adhan for Dart / Muslim Prayer Times Library.
+description: Adhan for Dart / Muslim Prayer Times Library. Now retrieving Prayer time in Dart easier than ever.
 version: 1.1.1
 homepage: https://github.com/iamriajul/adhan-dart
 
