--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,3 +20,5 @@ jobs:
       run: pub get
     - name: Run tests
       run: pub run test
+    - name: Run test coverage
+      run: pub run test_coverage
