--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,5 +10,5 @@ include: package:pedantic/analysis_options.yaml
 #     - camel_case_types
 
 analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
+  exclude:
+    - example/adhan_example_flutter_app/**
