ci: codecov support trying

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,3 +22,5 @@ jobs:
       run: pub run test
     - name: Run test coverage
       run: pub run test_coverage
+    - name: upload reports to codecov
+      run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}
