--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dev_dependencies:
   test: ^1.14.4
   intl: ^0.16.1
   dart_numerics: ^0.0.5
-  test_coverage: ^0.4.1
+  test_coverage: 0.4.1
   enum_to_string: ^1.0.9
   strings: ^0.1.2
   path: ^1.7.0
