--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,14 +15,12 @@ jobs:
       image:  google/dart:latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: pub get
-    - name: Run tests
-      run: pub run test
-    - name: Run test coverage
-      run: pub run test_coverage
-    - name: upload reports to codecov
-      run: curl -s https://codecov.io/bash | bash
-      env:
-        CODECOV_TOKEN: '${{ secrets.CODECOV_TOKEN }}'
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: pub get
+      - name: Run test with coverage
+        run: pub run test --coverage coverage
+      - name: upload reports to codecov
+        run: curl -s https://codecov.io/bash | bash -f coverage/lcov.info
+        env:
+          CODECOV_TOKEN: '${{ secrets.CODECOV_TOKEN }}'
