--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         run: pub get
       - name: Run test with coverage
         run: pub run test --coverage coverage
-      - name: upload reports to codecov
-        run: curl -s https://codecov.io/bash | bash -f coverage/lcov.info
-        env:
-          CODECOV_TOKEN: '${{ secrets.CODECOV_TOKEN }}'
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: ./coverage/lcov.info
