ci: fix Issue detecting commit SHA. Please run actions/checkout with fetch-depth > 1 or set to 0
https://github.com/codecov/codecov-action/issues/190

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
       - name: Install dependencies
         run: pub get
       - name: Run test with coverage
