--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 2
+          fetch-depth: 0
       - name: Install dependencies
         run: pub get
       - name: Run test with coverage
-        run: pub run test --coverage coverage
+        run: dart run test --coverage coverage
       - name: upload reports to codecov
         run: curl -s https://codecov.io/bash | bash
         env:
