--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,10 +18,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: pub get
-    - name: Run tests
-      run: pub run test
-    - name: Run test coverage
-      run: pub run test_coverage
+    - name: Run test with coverage 
+      run: pub run test --coverage coverage
+    - name: Generate lcov.info for test coverage
+      run: pub global activate coverage && pub global run coverage:format_coverage -i coverage/test -o coverage/lcov.info --lcov
     - name: upload reports to codecov
       run: curl -s https://codecov.io/bash | bash
       env:
