--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: tests
 
 on:
   push:
-    branches: [ master, v2 ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, v2 ]
+    branches: [ master ]
 
 jobs:
   build:
