--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 image: gitpod/workspace-flutter
-  
+
 tasks:
   - init: 'dart pub get && dart run'
   - command: 'cd ./example/adhan_example_flutter_app && flutter pub get && flutter run -d web-server --web-port=8080 --web-hostname=0.0.0.0'
@@ -7,3 +7,7 @@ tasks:
 ports:
   - port: 8080
     onOpen: open-preview
+vscode:
+  extensions:
+    - dart-code.dart-code@3.20.1:gKwMOzlkrgxrb7aPrMdQ8w==
+    - dart-code.flutter@3.20.0:fCUgJ2byoDmsmQf0Dq12+g==
