--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dev_dependencies:
   test: ^1.16.5
   intl: ^0.17.0
   dart_numerics: ^0.0.5
-  enum_to_string: ^2.0.0-nullsafety.1
+  enum_to_string: ^2.0.1
   strings: ^0.1.2
   path: ^1.8.0
-  timezone: ^0.7.0-nullsafety.0
+  timezone: ^0.9.2
